# auv_dev_ws

./: README.md
auv_dev_ws/: start.sh
auv_dev_ws/install/: local_setup.sh  setup.sh
auv_dev_ws/install/interfaces/include/interfaces/interfaces/msg/: uint8_array.hpp
auv_dev_ws/install/interfaces/include/interfaces/interfaces/msg/detail/: uint8_array__builder.hpp  uint8_array__rosidl_typesupport_fastrtps_cpp.hpp  uint8_array__rosidl_typesupport_introspection_cpp.hpp  uint8_array__struct.hpp  uint8_array__traits.hpp
auv_dev_ws/install/interfaces/local/lib/python3.10/dist-packages/interfaces/: _interfaces_s.ep.rosidl_typesupport_c.c  _interfaces_s.ep.rosidl_typesupport_fastrtps_c.c
auv_dev_ws/install/interfaces/local/lib/python3.10/dist-packages/interfaces-0.0.0-py3.10.egg-info/: SOURCES.txt
auv_dev_ws/install/interfaces/share/interfaces/: local_setup.sh  package.sh  package.xml
auv_dev_ws/install/interfaces/share/interfaces/cmake/: export_interfaces__rosidl_generator_cExport.cmake  export_interfaces__rosidl_generator_pyExport.cmake  interfaces__rosidl_typesupport_cppExport.cmake  interfaces__rosidl_typesupport_introspection_cppExport.cmake
auv_dev_ws/install/interfaces/share/interfaces/msg/: Uint8Array.idl
auv_dev_ws/install/pi_daq/lib/pi_daq/: BDGPS  Camera  EX3040  Magneto  P360  Pi  STM32  Server  UHF  UNM3000
auv_dev_ws/install/pi_daq/share/pi_daq/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
auv_dev_ws/install/pi_daq/share/pi_daq/cmake/: pi_daqConfig.cmake
auv_dev_ws/install/savedata/lib/savedata/: MagSave  Save
auv_dev_ws/install/savedata/share/savedata/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
auv_dev_ws/launch/: launch.xml
auv_dev_ws/src/interfaces/: CMakeLists.txt
auv_dev_ws/src/pi_daq/: CMakeLists.txt  package.xml
auv_dev_ws/src/pi_daq/include/: SerialPort.hpp  bdgps.hpp  camera.hpp  daqabc.hpp  ex3040.hpp  magneto.hpp  p360.hpp  pi.hpp  server.hpp  stm32.hpp  uhf.hpp  unm3000.hpp
auv_dev_ws/src/pi_daq/src/: bdgps.cpp  camera.cpp  ex3040.cpp  magneto.cpp  p360.cpp  pi.cpp  server.cpp  stm32.cpp  uhf.cpp  unm3000.cpp
auv_dev_ws/src/savedata/: CMakeLists.txt  package.xml
auv_dev_ws/src/savedata/src/: magsave.cpp  save.cpp
